# MoneyMap

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-offline.txt
.github/workflows/: ci.yml
data/: bridges.yaml  cells.yaml  keywords.yaml  mappings.yaml  meta.yaml  presets.yaml  taxonomy.yaml  variants.yaml
data/rulepacks/: DE.yaml  EN.yaml  ES.yaml  FR.yaml  PL.yaml  RU.yaml
data/ui_copy/: ru.yaml
data/ui_guides/: onboarding_ru.yaml
docs/: BACKLOG.md  DECISIONS.md  DEMO_10_MIN.md  DEV.md  MVP_CHECKLIST.md  PROJECTION_GRAPH.md  REPO_STRUCTURE.md  backlog.yaml  data_contracts.md  data_dictionary.md  data_inventory.md  data_workflow.md  user_guide.md
docs/releases/: 0.1-brief.md  (+18 more)
exports/: __init__.py
money_map/: __init__.py  __main__.py
profiles/: demo_de.yaml  demo_es.yaml  demo_fast_start.yaml  demo_fr.yaml  demo_pl.yaml
scripts/: build_wheelhouse.py  dev.ps1  dev.sh  e2e.ps1  e2e.sh  ingest_jobs_de.py  install_ui_deps.py  install_ui_offline.py  mvp.ps1  mvp.sh  mvp_check.py  quality.ps1  quality.sh
tests/: conftest.py  helpers.py  test_api_validation_guard.py  test_backlog_yaml.py  test_classify_pipeline.py  test_cli_error_output.py  test_cli_help.py  test_cli_lang_positions.py  test_cli_network_guard.py  test_cli_recommend_reason.py  test_cli_ui_command.py  test_cli_validation_guard.py  test_data_dictionary.py  test_doctor.py  test_e2e_api_flow.py  test_e2e_cli_flow.py  test_economics_snapshot.py  test_export_result_json_diagnostics.py  test_export_snapshots.py  test_export_writes_files.py  test_feasibility_engine.py  test_i18n_audit.py  test_i18n_duplicates.py  test_load_app_data.py  test_mvp_check_status.py  test_navigation_items.py  test_plan_contains_compliance_and_artifacts.py  test_plan_includes_compliance.py  test_plan_template_v1.py  test_profile_validation.py  test_projection_navigation_and_filters.py  test_quality_guardrails.py  test_recommend_deterministic.py  test_recommend_explanations.py  test_recommend_objectives.py  test_recommend_stage9_pipeline.py  test_recommendation_engine.py  test_release_guardrails_de_muc.py  test_reviews_evidence.py  test_rulepack_authoring.py  (+38 more)
(+92 files in other folders)
