[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "money-map"
version = "0.1.0"
description = "MoneyMap CLI and UI scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.32.0",
]

[project.scripts]
money-map = "money_map.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
