[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "money-map"
version = "0.1.0"
description = "MoneyMap CLI and UI scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.32.0",
]
dev = [
  "pre-commit>=3.8,<4.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.14,<1.0",
]

[project.scripts]
money-map = "money_map.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", ".venv", "dist", "build", "exports"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
